--- a/src/app/app.scss
+++ b/src/app/app.scss
@@ -1,6 +1,4 @@
 // http://ionicframework.com/docs/theming/
-
-
 // App Global Sass
 // --------------------------------------------------
 // Put style rules here that you want to apply globally. These
@@ -14,3 +12,41 @@
 // To declare rules for a specific mode, create a child rule
 // for the .md, .ios, or .wp mode classes. The mode class is
 // automatically applied to the <body> element in the app.
+.blocks {
+  background-color: #ff7800;
+  padding: 15px;
+  color: white;
+}
+
+.blocks-text {
+  font-size: 12px;
+  font-weight: bold;
+}
+
+.links {
+  color: white;
+  text-decoration: none;
+}
+
+.label {
+  font-size: 13px;
+}
+
+.required:after {
+  color: red;
+  content: ' *';
+}
+
+.field-input {
+  height: 35px !important;
+  font-size: 14px !important;
+}
+
+.button {
+  font-size: 16px;
+  padding: 25px 0px 25px 0px;
+}
+
+.validate {
+  border: solid 1.5px rgb(235, 7, 7);
+}
