--- a/src/app/view-students/view-students.component.html
+++ b/src/app/view-students/view-students.component.html
@@ -1,7 +1,7 @@
 <ion-header>
-  <ion-navbar>
+  <ion-navbar hideBackButton>
     <ion-title>
-      View Student
+      Students
     </ion-title>
   </ion-navbar>
 </ion-header>
@@ -26,10 +26,11 @@
     </ion-row>
   </ion-grid> -->
 
-  <table class="table table-bordered">
+  <table class="table table-bordered table-striped" style="text-align: center;">
     <thead>
       <tr>
         <th>#</th>
+        <th>Student ID</th>
         <th>Name</th>
         <th>Class</th>
       </tr>
@@ -37,8 +38,9 @@
     <tbody>
       <!-- <b *ngIf="NoStudentsFound">No Students Added</b> -->
       <tr [className]="student.statusColor" *ngFor="let student of students; let i='index + 1'" (click)="fetchStudentById(student.studentID)">
+        <td>{{i}}</td>
         <td>{{student.studentID}}</td>
-        <td>{{student.first_name}}</td>
+        <td>{{student.first_name}} {{student.last_name}}</td>
         <td>{{student.class}}</td>
       </tr>
     </tbody>
